refactor(payment): hexagonal architecture refactor and review fixes
- Payment module hexagonal (ports/adapters) refactor
- PaymentStatusSyncExecutor: save only when status actually changed
- DefaultPaymentHistoryQueryService: add @Service for bean registration
- Docs and tests updated

Made-with: Cursor